# qtquickdetect

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  LICENSE  README.md  app_config.json  build.sh  main.py  mkdocs.yml  pyproject.toml  qtquickdetect.py  realtime_experiment.py  requirements.txt  requirements_cuda_win.txt  run-linux.sh  run-windows.bat  run.bat  run_cuda.bat
docs/: about.md  features.md  index.md  installation.md  tasks.md  usage.md
gestion_projet/: class_diagram.puml  classes_diagramme.puml
local/: fr.qm  fr.ts
models/: app_config.py  app_state.py  app_tab.py  collections.py  config_file.py  preset.py  project.py  project_config.py  settings.py
notebooks/: detection_experiment.ipynb
pipeline/: img_detection.py  inference_thread.py  old_realtime_detection.py  pipeline.py  pipeline_manager.py  realtime_detection.py  torchvision_detect_pipeline.py  torchvision_segment_pipeline.py  vid_detection.py  yolo_detect_pipeline.py  yolo_segment_pipeline.py  yolov8_detect_pipeline.py
qtquickdetect/: __main__.py  app_config.json  qtquickdetect.py
tests/: test_app_config.py  test_app_config_widget.py  test_app_state.py  test_collection_selection_widget.py  test_collections.py  test_collections_widget.py  test_image_result_widget.py  test_inference_stream_widget.py  test_inference_widget.py  test_main_window.py  test_models_selection_widget.py  test_models_widget.py  test_pipelines.py  test_preset.py  test_preset_selection_widget.py  test_presets.py  test_presets_widget.py  test_progress_bar_widget.py  test_task_selection_widget.py  (+4 more)
utils/: file_handling.py  (+5 more)
(+130 files in other folders)
